--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,5 +1,7 @@
 NAME = iter
 
+HEADER = iter.hpp
+
 SRCS =	main.cpp
 
 OBJS = $(SRCS:.cpp=.o)
@@ -10,8 +12,8 @@ RM = rm -f
 
 all:	$(NAME)
 
-$(NAME):	$(OBJS)
-		clang++ $(CFLAGS) -o $(NAME) $^
+$(NAME):	$(OBJS) $(HEADER)
+		clang++ $(CFLAGS) -o $(NAME) $(OBJS)
 
 %.o:	%.cpp
 		clang++ $(CFLAGS) -c $< -o $@ -I.
